--- a/euclid-networks-direction-maps.html
+++ b/euclid-networks-direction-maps.html
@@ -6,15 +6,23 @@
 <title>Onsite Computer Repair Atlanta, GA - Direction Maps</title>
 <meta name="robots" content="index, follow, noopd, noydir" />
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
-<meta name="viewport" content="initial-scale=1">
-<meta name="description" content="Description" />
-<meta name="keywords" content="Keywords" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="description" content="For The Best Onsite Computer Repair Servce in Atlanta, GA - Get Your Computer Fixed As Soon As Today. We can make your computer problems a thing of the past." />
+<meta property="og:title" content="Onsite Computer Repair Atlanta, GA" />
+<meta name="twitter:title" content="Onsite Computer Repair Atlanta, GA" />
+<meta property="og:description" content="For The Best Onsite Computer Repair Servce in Atlanta, GA - Get Your Computer Fixed As Soon As Today. We can make your computer problems a thing of the past." />
+<meta name="twitter:description" content="For The Best Onsite Computer Repair Servce in Atlanta, GA - Get Your Computer Fixed As Soon As Today. We can make your computer problems a thing of the past." />
+<meta name="keywords" content="24 hour computer repair atlanta, apple computer repair atlanta ga, apple computer repair in atlanta, asus computer repair atlanta, best computer repair atlanta, best computer repair atlanta ga, computer hardware repair atlanta, computer monitor repair atlanta, computer repair 30331, computer repair atlanta, computer repair atlanta ga, computer repair atlanta georgia, computer repair atlanta midtown, computer repair atlanta northside drive, computer repair buckhead atlanta, computer repair cascade rd atlanta ga, computer repair cleveland ave atlanta ga, computer repair downtown atlanta, computer repair in atlanta, computer repair in atlanta ga, computer repair in atlanta georgia, computer repair midtown atlanta, computer repair near me, computer repair northside dr atlanta ga, computer repair ponce de leon atlanta, computer repair roswell road atlanta, computer repair services atlanta, computer repair services atlanta ga, computer repair services in atlanta ga, computer repair shop atlanta, computer repair shops atlanta ga, computer repair shops in atlanta, computer repair shops in atlanta ga, computer repair southwest atlanta, computer repair stores in atlanta, computer screen repair atlanta, computer screen repair atlanta ga, dell computer repair atlanta, home computer repair atlanta, hp computer repair atlanta, in home computer repair atlanta, laptop repair atlanta, laptop repair atlanta ga, mac computer repair atlanta ga, mobile computer repair atlanta, onsite computer repair atlanta, onsite computer repair atlanta ga, onsite computer repair in atlanta ga, onsite computer repair in atlanta, onsite computer repair near atlanta ga, onsite computer repair near atlanta, same day computer repair atlanta, toshiba computer repair atlanta" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://s3.amazonaws.com/cs-beta/Onsite+Computer+Repair+Atlanta+-+Euclid+Networks+-+(404)+593-0083+CS.html" />
+<meta name="twitter:url" content="https://s3.amazonaws.com/cs-beta/Onsite+Computer+Repair+Atlanta+-+Euclid+Networks+-+(404)+593-0083+CS.html" />
 <meta itemprop="image" content="https://i.ytimg.com/vi/xaIuTEPCkwA/hqdefault.jpg" />
 <meta property="og:type" content="article"/>
 <meta property="og:image" content="https://i.ytimg.com/vi/xaIuTEPCkwA/hqdefault.jpg">
 <meta property="og:image:type" content="image/jpg">
 <meta property="og:title" content="Onsite Computer Repair Atlanta, GA - Euclid Networks"/>
 <meta property="og:description" content="For The Best Onsite Computer Repair Servce in Atlanta, GA - Get Your Computer Fixed As Soon As Today. We can make your computer problems a thing of the past. Our expert and friendly computer repair techs treat you with the respect and courtesy you deserve. We are certitied and experienced to fix your computer or mobile device quickly so you get back up and running even better than before. So whether you need, general computer repair service, laptop repair, laptop screen repair, data recovery, virus removal or any other computer services, you can depend on us. From residential, commercial to small business call us today and let us help!"/>
+<link rel="canonical" href="https://s3.amazonaws.com/cs-beta/Onsite+Computer+Repair+Atlanta+-+Euclid+Networks+-+(404)+593-0083+CS.html" />
 <style type="text/css">
 body {margin:0; padding:0; font-family: 'arial', sans-serif; background: #e6e6e7; color:#000; font-size:14px;}
 #header-wrapper {width:100%; background:#006633; display:block;}
