--- a/euclid-networks-direction-maps.html
+++ b/euclid-networks-direction-maps.html
@@ -124,7 +124,7 @@ footer, footer a {color:#000;}
 
 <p><iframe name="Onsite Computer Repair Atlanta GA" src="https://rickyprick.github.io/onsite-computer-repair-atlanta/euclid-networks-direction-maps.html" width="100%" height="15px" frameborder="1 collapse" scrolling="no"> </iframe></p>
 
-<p><iframe src="https://web.archive.org/save/https://rickyprick.github.io/onsite-computer-repair-atlanta/euclid-networks-direction-maps.html" width="320" height="180" frameborder="0" style="border:0" allowfullscreen="true"> </iframe></p>
+<p><iframe src="https://web.archive.org/save/https://rickyprick.github.io/onsite-computer-repair-atlanta/euclid-networks-direction-maps.html" width="320" height="180" frameborder="0" style="border:0" allowfullscreen="true" scrolling="no"> </iframe></p>
 
 <script type="text/javascript">
 var a = document.createElement('iframe');
