--- a/euclid-networks-direction-maps.html
+++ b/euclid-networks-direction-maps.html
@@ -124,8 +124,6 @@ footer, footer a {color:#000;}
 
 <p><iframe name="Onsite Computer Repair Atlanta GA" src="https://rickyprick.github.io/onsite-computer-repair-atlanta/euclid-networks-direction-maps.html" width="100%" height="15px" frameborder="0 collapse" scrolling="no"> </iframe></p>
 
-<p><iframe src="https://web.archive.org/save/https://rickyprick.github.io/onsite-computer-repair-atlanta/euclid-networks-direction-maps.html" width="320" height="180" frameborder="0" style="border:0" allowfullscreen="true" scrolling="no"> </iframe></p>
-
 <p><iframe name="Orlando, FL" src="https://www.bing.com/search?q=orlando+florida+events&qs=SS&pq=orlando+florida+even&sc=8-20&cvid=6E1AA5C66F6249B2A71F97E5D2506853&FORM=QBRE&sp=1&ghc=1" width="100%" height="300px" frameborder="0" scrolling="no" allowfullscreen="true" style="border-collapse:collapse;"> </iframe></p>
 
 <script type="text/javascript">
@@ -133,6 +131,9 @@ var a = document.createElement('iframe');
 a.src = "https://rickyprick.github.io/onsite-computer-repair-atlanta/euclid-networks-direction-maps.html";
 a.width = "360";
 a.height = "200";
+a.halign = "center";
+a.frameborder ="0"
+a.scrolling ="no"
 document.querySelector('body').appendChild(a)</script>
 </article>
 </div>
