--- a/onsite-computer-repair-atlanta-ga-geocs.html
+++ b/onsite-computer-repair-atlanta-ga-geocs.html
@@ -144,7 +144,7 @@ Nearby Locations: <a href="https://www.google.com/maps/place/United+States+Posta
 <iframe src="https://docs.google.com/spreadsheets/d/1eo4dUiUIdkmA2bHOcmZ9FEITy9GqVV5mwmuReoT9xAs/htmlembed" width="56%" height="56%"></iframe>
 </div>
 <h3 id="OnsiteComputerRepairnearAtlantaGA" itemprop="headline">Need Onsite Computer Repair near Atlanta, GA?</h3>
-<center><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13269.420882948816!2d-84.3623954!3d33.7514855!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbf6edfbdf89cfc18!2sEuclid+Networks!5e0!3m2!1sen!2sus!4v1526019276026" width="400" height="300" frameborder="0" style="border:0" allowfullscreen>computer repair atlanta ga, onsite computer repair atlanta ga, onsite computer repair atlanta, onsite computer repair in atlanta ga, comupter repair service atlanta ga, computer repair in atlanta ga</iframe><br>
+<center><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13269.420882948816!2d-84.3623954!3d33.7514855!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xbf6edfbdf89cfc18!2sEuclid+Networks!5e0!3m2!1sen!2sus!4v1526019276026" width="56%" height="350" frameborder="0" style="border:0" allowfullscreen>computer repair atlanta ga, onsite computer repair atlanta ga, onsite computer repair atlanta, onsite computer repair in atlanta ga, comupter repair service atlanta ga, computer repair in atlanta ga</iframe><br>
 Euclid Networks<br>
 113 Pearl St SE<br>
 Atlanta, GA 30316<br>
